--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
               <option value=8>8</option>
             </select>
           </p>
+          (The number of outputs the physical board has.)
           <p>
             Duty Cycle
             <input id="dcPercent" step="1" type="number" min="0" max="100" value="20" onchange="compute();">
           </p>
+          (Used to scale the pulses on the chart.)
         </div>
       </div>
       <div class="square" style="float: right; margin-left:5px;">
