fix chart update and fix reqFuel formula

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <input id="reqFuel" step="0.1" type="number" min="0" max="25.5" value="12.0" onchange="compute();">
           </p>
           <p>
+            Acutal ms
+            <input id="actualms" step="0.1" type="number" min="0" max="25.5" value="12.0" disabled>
+          </p>
+          <p>
             Control Algorithm
             <select disabled>
               <option>MAP</option>
@@ -127,40 +131,6 @@
       <div class="square" style="float: right; margin-left:5px;">
         <canvas id="myChart" width="600" height="500"></canvas>
       </div>
-      <!--div class="square" style="float: right; margin-left:5px;">
-        <h1>Results</h1>
-        <p>PW:
-          <b class="out" id="PW"></b>ms
-        </p>
-        <p>Full Cycle:
-          <b class="out" id="cycle"></b>°
-        </p>
-        <br>
-        <p>Inj1:
-          <b class="out" id="inj1"></b>°
-        </p>
-        <p>Inj2:
-          <b class="out" id="inj2"></b>°
-        </p>
-        <p>Inj3:
-          <b class="out" id="inj3"></b>°
-        </p>
-        <p>Inj4:
-          <b class="out" id="inj4"></b>°
-        </p>
-        <p>Inj5:
-          <b class="out" id="inj5"></b>°
-        </p>
-        <p>Inj6:
-          <b class="out" id="inj6"></b>°
-        </p>
-        <p>Inj7:
-          <b class="out" id="inj7"></b>°
-        </p>
-        <p>Inj8:
-          <b class="out" id="inj8"></b>°
-        </p>
-      </div-->
     </div>
   </div>
 
