scale graph only by duty cycle

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       </div>
       <div class="square" style="float: right; margin-left:5px;">
         <canvas id="myChart" width="600" height="500"></canvas>
+        <p id="req_fuel_uS"></p>
       </div>
     </div>
   </div>
